package ar.edu.utn.frba.dds.modelos.fusion_organizacion;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class SolicitudFusion {
  private Organizacion organizacion1;
  private Organizacion organizacion2;
}
